# SysMonitor

./: README.md  main.py  pyproject.toml  requirements.txt
app/: CpuUsageMonitor.py  DiskIOReadandWrite.py  ISP.py  MemoryUsage.py  NoOfProcess.py  WhatIsIp.py  logic.py  style.py
